# whisper

./: README.md  blog-whisper.cabal  package.yaml  stack.yaml  whisper.cabal
app/: Main.hs
examples/: prime.lisp
src/: Eval.hs  EvalTypes.hs  Parser.hs
